outputs_20260326-112231-85b57cd7/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxGtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\src\gtm_tom_3_phase_inverter_pwm.c:13:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:8:5: error: unknown type name 'IfxPort_LvdsMode'
    8 |     IfxPort_LvdsMode     lvdsMode;
      |     ^~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:9:5: error: unknown type name 'IfxPort_ControlledBy'
    9 |     IfxPort_ControlledBy enablePortControlled;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:10:5: error: unknown type name 'IfxPort_PadSupply'
   10 |     IfxPort_PadSupply    padSupply;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:21:5: error: unknown type name 'IfxPort_OutputIdx'
   21 |     IfxPort_OutputIdx mode;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:22:5: error: unknown type name 'IfxPort_PadDriver'
   22 |     IfxPort_PadDriver padDriver;
      |     ^~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxGtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:8:5: error: unknown type name 'IfxPort_LvdsMode'
    8 |     IfxPort_LvdsMode     lvdsMode;
      |     ^~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:9:5: error: unknown type name 'IfxPort_ControlledBy'
    9 |     IfxPort_ControlledBy enablePortControlled;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:10:5: error: unknown type name 'IfxPort_PadSupply'
   10 |     IfxPort_PadSupply    padSupply;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:21:5: error: unknown type name 'IfxPort_OutputIdx'
   21 |     IfxPort_OutputIdx mode;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zhvdgu0y\include/IfxPort.h:22:5: error: unknown type name 'IfxPort_PadDriver'
   22 |     IfxPort_PadDriver padDriver;
      |     ^~~~~~~~~~~~~~~~~
